[#6418] Fix wrapping in item grant summary on item sheets
Closes #6418

--- a/less/v2/items.less
+++ b/less/v2/items.less
@@ -456,6 +456,8 @@
       }
 
       .summary {
+        display: flex;
+        flex-wrap: wrap;
         font-size: var(--font-size-10);
         color: var(--color-text-secondary);
 
